force-app/main/default/objects/Pending_Upload__c/Pending_Upload__c.object-meta.xml
<CustomObject>
    <label>Pending Upload</label>
    <nameField>
        <label>Pending Upload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pending Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>