force-app/main/default/objects/Pending_Upload__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Optional link to the related Account.</description>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pending Uploads</relationshipLabel>
    <relationshipName>Pending_Uploads_Account</relationshipName>
    <type>Lookup</type>
</CustomField>