force-app/main/default/objects/Pending_Upload__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <description>Optional link to the related Case.</description>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pending Uploads</relationshipLabel>
    <relationshipName>Pending_Uploads_Case</relationshipName>
    <type>Lookup</type>
</CustomField>