force-app/main/default/objects/Pending_Upload__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Optional link to the related Contact.</description>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pending Uploads</relationshipLabel>
    <relationshipName>Pending_Uploads_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>