force-app/main/default/objects/Pending_Upload__c/fields/Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_ID__c</fullName>
    <description>ContentVersion Id of the Salesforce file we intended to upload.</description>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>