force-app/main/default/objects/Pending_Upload__c/fields/Created_By_Batch__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Batch__c</fullName>
    <description>True if the nightly batch created this row.</description>
    <label>Created By Batch</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>