force-app/main/default/objects/Pending_Upload__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Original file name (for UI and S3 key generation).</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>