force-app/main/default/objects/Pending_Upload__c/fields/Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>Mime_Type__c</fullName>
    <description>Detected or inferred MIME type (e.g. application/pdf).</description>
    <label>Mime Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>