force-app/main/default/objects/Pending_Upload__c/fields/Next_Action_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_At__c</fullName>
    <description>When an automated process should look at this record again.</description>
    <label>Next Action At</label>
    <type>DateTime</type>
</CustomField>