force-app/main/default/objects/Pending_Upload__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Optional link to the related Opportunity.</description>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pending Uploads</relationshipLabel>
    <relationshipName>Pending_Uploads_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>