force-app/main/default/objects/Pending_Upload__c/fields/S3_Key__c.field-meta.xml
<CustomField>
    <fullName>S3_Key__c</fullName>
    <description>Target S3 key for the object once uploaded.</description>
    <label>S3 Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>