force-app/main/default/objects/Pending_Upload__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <description>Optional Task Id associated with this upload (plain text).</description>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>